@@ -1,8 +1,10 @@
 Cibyl (12)
-	* Improved the performance of the syscall generator by only
+	* Improved the performance of cibyl-generate-java-wrappers by only
 	reading in what's needed: The RoadMap syscall defs previously took
 	almost 2.5 minutes on my computer, with the optimizations it
-	finishes in less than 30 seconds.
+	finishes in less than 30 seconds. Also made some smaller
+	improvements to cibyl-mips2java, which should improve performance
+	by about 10%
 
 	* Extended with various new J2ME syscalls (partially from Ehud)
 
